kustomize/parlasite-viii/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parlasite-viii
  labels:
    app: parlasite-viii
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parlasite-viii
  template:
    metadata:
      labels:
        app: parlasite-viii
    spec:
      containers:
        - name: parlasite-viii
          image: parlasite-slovenija
          ports:
            - containerPort: 3066
          resources:
            requests:
              memory: 400Mi
              cpu: 100m
            limits:
              memory: 400Mi
              cpu: 100m
          startupProbe:
            httpGet:
              path: /readyz
              port: 3066
            periodSeconds: 10
            failureThreshold: 30 # 30x10 = 300s = 5min
