kustomize/parlasite-viii/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parlasite-viii
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - viii.parlameter.si
      secretName: parlasite-viii-tls
  rules:
    - host: viii.parlameter.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parlasite-viii
                port:
                  number: 3066
